--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
             <version>8.2.0</version>
             <scope>runtime</scope>
         </dependency>
+	<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
