--- a/assistance_service/src/main/resources/application.yaml
+++ b/assistance_service/src/main/resources/application.yaml
@@ -3,9 +3,9 @@ spring:
     name: assistance-service
 
   datasource:
-    url: jdbc:mysql://${DB_HOST}/${DB_NAME}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: jdbc:mysql://localhost/spring
+    username: reda
+    password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
