--- a/logistics-service/src/main/resources/application.yaml
+++ b/logistics-service/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     name: logistics-service
 
   datasource:
-    url: jdbc:mysql://localhost/spring
+    url: jdbc:mysql://10.156.0.4/spring
     username: reda
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
