--- a/user_service/pom.xml
+++ b/user_service/pom.xml
@@ -29,11 +29,10 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.2.0</version>
-            <scope>runtime</scope>
-        </dependency>
+   		<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-java</artifactId>
+    		<version>8.0.33</version>
+	</dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
